[优化] 取消打印 `gc` 信息以提升性能